# ksyntax-highlighting-wrapper

./: CMakeLists.txt  README.md
include/: ksyntaxhighlightingwrapper.h
src/: CMakeLists.txt  KSyntaxHighlightingWrapperConfig.cmake.in  ksyntaxhighlightingwrapper.cpp  ksyntaxhighlightingwrapper_p.h
src/example/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
src/example/qml/: ScrollViewClassic.qml  SourceCodeArea.qml  TextAreaForEdit.qml  main.qml
src/lib/: CMakeLists.txt  ksyntax-highlighting-wrapper-example-lib.qrc  ksyntaxhighlightingwrapper.cpp  ksyntaxhighlightingwrapper_p.h
src/lib/ksyntax-highlighting-wrapper/: CMakeLists.txt  ksyntaxhighlighterex.cpp  ksyntaxhighlighterex.h  ksyntaxhighlightingwrapper.cpp  ksyntaxhighlightingwrapper.h  ksyntaxhighlightingwrapper_p.h
src/lib/qml/KSyntaxHighlighting/: qmldir
src/lib/qml/TextAreaEnh/: CodeArea.qml  qmldir
src/lib/text-area-enhanced/: CMakeLists.txt  TextAreaEnhancedConfig.cmake.in  textarea_enhanced.cpp  textarea_enhanced.h  textarea_enhanced_lib.qrc  textsearch_helper.cpp  textsearch_helper.h  textsearch_helper_p.h  textsearch_highlighter.cpp  textsearch_highlighter.h
src/lib/text-area-enhanced/TextAreaSearchFrame/: qmldir
src/lib/text-area-enhanced/qml/TextAreaEnhanced/: CodeArea.qml  SearchFrame.qml  TextAreaExCodeArea.qml  TextAreaExConnector.qml  TextAreaExSearchFrame.qml  qmldir
